# lsp-cli

./: .gitignore  CLAUDE.md  PACKAGING_SUMMARY.md  README.md  UPSTREAM_PR_ANALYSIS.md  analysis.md  biome.json  csharp.json  debug-cpp.json  debug-java.json  final-auth-test.json  llms.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  restored-test-output.json  spine-cpp.json  tsconfig.json  verify-real-lsp.json  vitest.config.ts
.husky/: pre-commit
.plans/: plan-50148661-ddfc-425f-986e-00941406ba71.json  plan-50148661-ddfc-425f-986e-00941406ba71.txt  plan-6a222d75-5892-4ff1-8579-6bf9f528b96d.json  plan-6a222d75-5892-4ff1-8579-6bf9f528b96d.txt  plan-7cf765a4-1b98-458b-906f-d32a3cbd93c6.json  plan-7cf765a4-1b98-458b-906f-d32a3cbd93c6.txt  plan-9bbbfd55-ca01-4345-a550-a0df78681899.json  plan-9bbbfd55-ca01-4345-a550-a0df78681899.txt
dev_docs/: HANDOFF.md  REMAINING_ISSUES.md  TASKS.md  python_and_rust_support_dev_outline.md  rust_implementation_insights.md
docs/: HANDOFF.md  PR_CREATION_HANDOFF.md  QUICK_START_NEXT_SESSION.md  SESSION_2025-10-02_SUMMARY.md  UPSTREAM_PR_STATUS.md  project-description.md
docs/todos/work/2025-07-11-19-06-45-fix-java-supertype-extraction/: task.md
docs/todos/work/2025-07-11-22-02-17-extract-generic-type-parameters/: task.md
src/: index.ts  language-client.ts  lib.ts  logger.ts  server-manager.ts  types.ts  utils.ts
test/: comment-extraction.test.ts  fixtures.test.ts  jq-examples.test.ts  lsp-cli.test.ts  setup.ts  utils.ts
test-llm/: llms.md
test/fixtures/c/: compile_commands.json
test/fixtures/c/.cache/clangd/index/: data_structures.c.298C1B8E95C911DF.idx  data_structures.c.846A5D0FA4EC584A.idx  data_structures.h.17842B8D8C142283.idx  data_structures.h.CD31917A8352C94A.idx  main.c.1C27AB2C33ABBF02.idx  main.c.829ED604922AC2AC.idx  string_utils.c.649BCDC97F6B6EFF.idx  string_utils.c.D94CCF4ED9A8CE3E.idx  string_utils.h.64CDF9C8C4F726CD.idx  string_utils.h.6A12D5232EC81860.idx
test/fixtures/c/src/: comment_test_service.c  data_structures.c  data_structures.h  main.c  string_utils.c  string_utils.h
test/fixtures/cpp/: compile_commands.json
test/fixtures/cpp/.cache/clangd/index/: main.cpp.5544C722E6A38FDC.idx  main.cpp.FE7336D3A1C1433C.idx  renderer.cpp.8329986444937B57.idx  renderer.cpp.94638F7F55E96705.idx  renderer.h.6F5D2AEDA9982770.idx  renderer.h.FA29E5B9A378BBF8.idx  vector.cpp.0386A4EA9E760A15.idx  vector.cpp.EE0B28059D2DBC99.idx  vector.h.3031996725626244.idx  vector.h.9741BC8FB182B779.idx
test/fixtures/cpp/include/graphics/: renderer.h
test/fixtures/cpp/include/math/: vector.h
test/fixtures/cpp/src/: CommentTestService.cpp  TypeHierarchyTest.cpp  main.cpp
test/fixtures/cpp/src/graphics/: renderer.cpp
test/fixtures/cpp/src/math/: vector.cpp
test/fixtures/csharp/src/: CommentTestService.cs
test/fixtures/dart/: pubspec.yaml
test/fixtures/dart/src/: main.dart  type_hierarchy_test.dart
test/fixtures/haxe/src/: Main.hx  TypeHierarchyTest.hx
test/fixtures/haxe/src/game/: Enemy.hx  Entity.hx  GameState.hx  Player.hx
test/fixtures/haxe/src/test/: CommentTestService.hx
test/fixtures/haxe/src/utils/: Logger.hx  MathUtils.hx
test/fixtures/java/: .project  MultiLineClassDeclaration.java  pom.xml
test/fixtures/java/src/com/example/exception/: ValidationException.java
test/fixtures/java/src/com/example/hierarchy/: TypeHierarchyTest.java
test/fixtures/java/src/com/example/model/: User.java  UserStatus.java
test/fixtures/java/src/com/example/repository/: UserRepository.java
test/fixtures/java/src/com/example/service/: Auditable.java  BaseService.java  ServiceInterface.java  UserService.java
test/fixtures/java/src/com/example/test/: CommentTestService.java
test/fixtures/python/: .gitignore  pyproject.toml  requirements.txt  setup.cfg  setup.py
test/fixtures/python/src/: __init__.py  advanced_features.py  constants.py  main.py
test/fixtures/python/src/models/: __init__.py  user.py
test/fixtures/python/src/services/: __init__.py  data_service.py
test/fixtures/python/src/utils/: __init__.py  helpers.py
test/fixtures/rust/: Cargo.toml
test/fixtures/rust/src/: advanced.rs  edge_cases.rs  main.rs  traits.rs
test/fixtures/rust/src/nested/: mod.rs  submodule.rs  utils.rs
test/fixtures/typescript/: package.json  tsconfig.json
test/fixtures/typescript/src/: CommentTestService.ts  OrderService.ts  TypeHierarchyTest.ts
test/fixtures/typescript/src/errors/: ValidationError.ts
test/fixtures/typescript/src/types/: Order.ts  User.ts
todos/: project-description.md
todos/done/: 2025-07-11-19-06-45-fix-java-supertype-extraction.md  2025-07-11-22-02-17-extract-generic-type-parameters.md  20250714-152206-package-sourcemaps-types.md
