[metadata]
name = lsp-cli-test-app
version = 1.0.0
author = Test Suite
author_email = test@example.com
maintainer = LSP CLI Team
maintainer_email = lsp-cli@example.com
description = Test application for LSP CLI Python support
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/example/lsp-cli-test-app
project_urls =
    Documentation = https://lsp-cli-test-app.readthedocs.io/
    Source = https://github.com/example/lsp-cli-test-app
    Tracker = https://github.com/example/lsp-cli-test-app/issues
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Typing :: Typed
keywords = lsp, language-server, python, testing

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir = 
    = .
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    aiohttp>=3.8.0
    pydantic>=2.0.0
    click>=8.1.0
    sqlalchemy>=2.0.0
    asyncpg>=0.28.0
    redis>=4.6.0
    asyncio-mqtt>=0.13.0
    aiofiles>=23.1.0
    python-dotenv>=1.0.0
    pyyaml>=6.0
    colorlog>=6.7.0

[options.packages.find]
where = .
include = src*
exclude = tests*

[options.package_data]
src = *.json, *.yaml, *.yml, *.toml

[options.extras_require]
dev = 
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    black>=23.3.0
    flake8>=6.0.0
    mypy>=1.4.0
    isort>=5.12.0
docs = 
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.2.0
testing = 
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    coverage[toml]>=7.2.0
all = 
    %(dev)s
    %(docs)s

[options.entry_points]
console_scripts =
    lsp-test-app = src.main:main
    lsp-test-cli = src.main:main

[bdist_wheel]
universal = 0

[sdist]
formats = gztar

[egg_info]
tag_build = 
tag_date = 0